# ctoolkit

./: INSTALL  LICENSE  README.md  RELEASE.md  __init__.py  info.py  pyproject.toml  setup.cfg
.github/scripts/: release.py
.github/workflows/: release.yml  static.yml
GROMACS/: GROMACS.py  __init__.py
LAMMPS/: LAMMPS.py
SCALEUP/: .SCALEUP.py.swp  SCALEUP.py  __init__.py
VASP/: POSCAR.py  VASP.py  imports.py  outcar.py
decorators/: __init__.py
docs/: ctoolkit.tools.rst  index.html  index.rst  info.html  version.html
docs/GROMACS/: GROMACS.html  index.html
docs/LAMMPS/: LAMMPS.html
docs/SCALEUP/: index.html
docs/VASP/: index.html  outcar.html
docs/_build/doctrees/: ctoolkit.LAMMPS.doctree  ctoolkit.VASP.doctree  ctoolkit.tools.doctree  index.doctree
docs/_build/html/: .buildinfo  ctoolkit.GROMACS.html  ctoolkit.LAMMPS.html  ctoolkit.SCALEUP.html  ctoolkit.html  ctoolkit.xyz.html  index.html  objects.inv  (+2 more)
docs/decorators/: print_to_file.html
docs/global_vars/: ext_libs.html  timers_dict.html  tk_lib_XYZ.html  update_version.html
docs/tools/: automation.html  constants.html  index.html  manageDirs.html  physicalProperties.html  randomTools.html  structOperations.html  tools.html
docs/xyz/: index.html
global_vars/: decorators.py  ext_libs.py  timers_dict.py  tk_lib_SCALEUP.py  tk_lib_XYZ.py  update_version.py  version.py
src/ctoolkit/: __init__.py  info.py  version.py
tools/: __init__.py  automation.py  cellOperations.py  manageDirs.py  physicalProperties.py  randomTools.py  structOperations.py  tools.py
xyz/: __init__.py  xyz.py
(+93 files in other folders)
