[metadata]
name = ctoolkit
description = The Crystal Toolkit.
long_description_content_type = text/markdown
url = https://github.com/cescorihuela/ctoolkit
project_urls =
    Bug Tracker = https://github.com/cescorihuela/ctoolkit/issues
    Changelog = https://github.com/cescorihuela/ctoolkit/releases
classifiers =
    Programming Language :: Python :: 3
    License :: BSD License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
